# rust-example

./: .gitignore  Cargo.toml  README.md
.cargo/registry/cache/github.com-1ecc6299db9ec823/: bumpalo-3.11.0.crate  cxx-1.0.78.crate  cxx-build-1.0.78.crate  cxxbridge-flags-1.0.78.crate  cxxbridge-macro-1.0.78.crate  iana-time-zone-0.1.51.crate  iana-time-zone-haiku-0.1.0.crate  js-sys-0.3.60.crate  link-cplusplus-1.0.7.crate  nyx-2.2.1.crate  scratch-1.0.2.crate  sgp4-0.7.0.crate  uom-0.33.0.crate  wasm-bindgen-0.2.83.crate  wasm-bindgen-backend-0.2.83.crate  wasm-bindgen-macro-0.2.83.crate  wasm-bindgen-macro-support-0.2.83.crate  wasm-bindgen-shared-0.2.83.crate
.cargo/registry/src/github.com-1ecc6299db9ec823/chrono-0.4.22/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/cxx-1.0.78/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/cxx-build-1.0.78/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/cxxbridge-flags-1.0.78/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/cxxbridge-macro-1.0.78/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/iana-time-zone-0.1.51/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/iana-time-zone-haiku-0.1.0/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/link-cplusplus-1.0.7/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/nyx-2.2.1/: .cargo_vcs_info.json  Cargo.toml  README.md  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json
src/: iss.rs  rust-example.rs
(+85 files in other folders)
