[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
nalgebra = "0.27.1"
nyx-space = "=1.0.0"
rand = "0.8.5"
sgp4 = "0.7.0"

[[bin]]
name = "rust-example"
path = "src/rust-example.rs"
